Reviewed by Eric Seidel.
        Slightly elaborated the differences between declaration procesing in 
        Function Code and Program Code.
        
        .3% speedup on SunSpider.

        * kjs/nodes.cpp:
        (KJS::FunctionBodyNode::processDeclarationsFunctionCode): 
        (KJS::FunctionBodyNode::processDeclarationsProgramCode): Store a 
        minimum set of attributes instead of recomputing all the time. Also,
        ignore m_parameters, since programs don't have arguments.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27032 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,18 @@
+2007-10-25  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Eric Seidel.
+        
+        Slightly elaborated the differences between declaration procesing in 
+        Function Code and Program Code.
+        
+        .3% speedup on SunSpider.
+
+        * kjs/nodes.cpp:
+        (KJS::FunctionBodyNode::processDeclarationsFunctionCode): 
+        (KJS::FunctionBodyNode::processDeclarationsProgramCode): Store a 
+        minimum set of attributes instead of recomputing all the time. Also,
+        ignore m_parameters, since programs don't have arguments.
+
 2007-10-25  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Maciej.
