--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,17 @@
 
         Reviewed by Simon Hausmann <hausmann@kde.org>.
 
+        * Make fast/loader/xmlhttprequest-bad-mimetype.html pass. We use QHttp to download local files but we may not set the HTTP result code on the ResourceResponse.
+        * We can use the cross-platform result now. QWebNetworkInterface/Manager behaves the same as mac for local files.
+        
+
+        * Api/qwebnetworkinterface.cpp:
+        (QWebNetworkManager::started):
+
+2007-10-25  Holger Freyther  <zecke@selfish.org>
+
+        Reviewed by Simon Hausmann <hausmann@kde.org>.
+
         * fast/dom/onerror-img.html regressed due checking the JobStates because in case of error (e.g. not being able to connect) the job will no be started.
         * Use the error message from Qt. It might or might not be translated.
         
