--- a/WebKitLibraries/ChangeLog
+++ b/WebKitLibraries/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-25  Sam Weinig  <sam@webkit.org>
+
+        Added wrapper for getting the foundation cache directory.
+
+        Reviewed by Adam Roben.
+
+        * win/include/WebKitSystemInterface/WebKitSystemInterface.h:
+        * win/lib/WebKitSystemInterface.lib:
+        * win/lib/WebKitSystemInterface_debug.lib:
+
 2007-10-24  Adam Roben  <aroben@apple.com>
 
         Added some font-related functions needed for <rdar://5549919>
