--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-25  Adam Roben  <aroben@apple.com>
+
+        Update WebKit.sln for the removal of Release dftables
+
+        Reviewed by NOBODY.
+
+        * WebKit.vcproj/WebKit.sln:
+
 2007-10-25  Kevin McCullough  <kmccullough@apple.com>
 
         Rubber stamped by Geoff.
