Weinig also reviewed this patch, and wanted Changelog credit for it
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27067 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -25,7 +25,7 @@
 
 2007-10-25  Brady Eidson  <beidson@apple.com>
 
-        Reviewed by Anders
+        Reviewed by Anders and Sam
 
         Bulk rename of platform/sql/SQL* to platform/sql/SQLite*
         
