--- a/WebKitLibraries/ChangeLog
+++ b/WebKitLibraries/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-25  Sam Weinig  <sam@webkit.org>
+
+        Fix the windows build.
+
+        * win/lib/WebKitSystemInterface.lib:
+        * win/lib/WebKitSystemInterface_debug.lib:
+
 2007-10-25  Timothy Hatcher  <timothy@apple.com>
 
         Add WKSetPatternBaseCTM.
