Make sunspider-compare-results work with relative paths
        Reviewed by Sam.

        * Scripts/sunspider-compare-results: Convert arguments to absolute
        paths before we chdir.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27077 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-25  Adam Roben  <aroben@apple.com>
+
+        Make sunspider-compare-results work with relative paths
+
+        Reviewed by Sam.
+
+        * Scripts/sunspider-compare-results: Convert arguments to absolute
+        paths before we chdir.
+
 2007-10-25  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Sam.
