--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -2,6 +2,15 @@
 
         Reviewed by Adam Roben.
 
+        Make debug builds run again.
+
+        * WebView.cpp:
+        (WebView::notifyPreferencesChanged):
+
+2007-10-25  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Adam Roben.
+
         Remove JSStringRefCFHack.
 
         * WebKit.vcproj/WebKit.vcproj:
