Weak link against WebCore so DumpRenderTree can be bundled with production roots.
        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:

git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27085 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-25  Stephanie  <slewis@apple.com>
+
+        Reviewed by Mark Rowe, Adam Roben.
+
+        Weak link against WebCore so DumpRenderTree can be bundled with production roots.
+
+        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj: 
+
 2007-10-25  Alice Liu  <alice.liu@apple.com>
 
         Reviewed by Adam.
